nebulosa/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-web
  namespace: observability
spec:
  parentRefs:
    - name: nebulosa-internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - grafana.internal.cloudhaven.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
